<resources>
    <string name="app_name">LinearLayout</string>
    <string name="carritoCompra">Carrito de la compra</string>
    <string name="unidades">unidades</string>
    <string name="producto1">Producto 1</string>
    <string name="producto2">Producto 2</string>
    <string name="producto3">Producto 3</string>
    <string name="enviarCorreo">Enviar por correo electrónico</string>
    <string name="importe">Importe</string>
    <string name="iva">I.V.A.</string>
    <string name="total">Total</string>
    <string name="volver">Volver</string>
    <string name="confirmar">Confirmar</string>
    <string name="dineroImporte">000.00€</string>
    <string name="dineroIva">00.00€</string>
    <string name="dineroTotal">0000.00€</string>
</resources>
