<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.nerea.linearlayout.LinearLayout"
    android:orientation="vertical"
    android:background="@color/negro">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/carritoCompra"
        android:textColor="@color/blanco" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FFFFFF" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/producto1"
            android:id="@+id/tvProducto1"
            android:textColor="@color/blanco" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/blanco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidades"
            android:id="@+id/tvUnidades"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/producto2"
            android:id="@+id/tvProducto2"
            android:textColor="@color/blanco" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/blanco" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidades"
            android:id="@+id/tvUnidades2"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/producto3"
            android:id="@+id/tvProducto3"
            android:textColor="@color/blanco" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/blanco" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidades"
            android:id="@+id/tvUnidades3"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviarCorreo"
        android:id="@+id/btEnviarCorreo"
        android:textColor="@color/negro" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FFFFFF" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/importe"
            android:id="@+id/tvImporte"
            android:textColor="@color/blanco" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dineroImporte"
            android:id="@+id/tvCantidadImporte"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/iva"
            android:id="@+id/tvIva"
            android:textColor="@color/blanco" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dineroIva"
            android:id="@+id/tvCantidadIva"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/total"
            android:id="@+id/tvTotal"
            android:textColor="@color/blanco" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dineroTotal"
            android:id="@+id/tvCantidadTotal"
            android:textColor="@color/blanco" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FFFFFF" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/volver"
            android:id="@+id/btVolver"
            android:textColor="@color/negro" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar"
            android:id="@+id/btConfirmar"
            android:textColor="@color/negro" />
    </LinearLayout>

</LinearLayout>
